isSet() replaced with Objects.nonNull()